# tabularbench-cf

./: .gitignore  Dockerfile  README.md  pyproject.toml
tabularbench/attacks/caa/: caa.py
tabularbench/datasets/: dataset.py
tabularbench/datasets/samples/: ctu_13_neris.py  lcld.py  malware.py  url.py  wids.py
tabularbench/metrics/: compute.py
tabularbench/models/: model.py  tab_scaler.py  torch_models.py
tabularbench/models/tabsurvey/: mlp_rln.py  stg.py  tabnet.py  vime.py
tabularbench/models/tabsurvey/stg_lib/: matching.py  meter.py  utils.py
tabularbench/utils/: typing.py
tasks/: train_model.py
