[project]
name = "tabularbench"
version = "0.1.0"
description = "TabularBench: Adversarial robustness benchmark for tabular data"
authors = [
    { name = "Thibault Simonetto", email = "thibault.simonetto@uni.lu" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "torch>=2.2",
    "requests>=2.25.1",
    "scikit-learn>=1.3",
    "tables>=3.9",
    "optuna>=3.4",
    "h5py>=3.11.0",
    "torchattacks>=3.5",
    "einops>=0.6.1",
    "lifelines>=0.27.8",
    "pytorch-tabnet>=4.1.0",
    "pymoo>=0.6",
    "pyarrow>=16.1.0",
    "huggingface-hub>=0.26.2",
]

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "isort>=5.13.2",
    "pre-commit>=3.5",
    "black>=24.4.2",
    "sphinx==6.2.1",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser==3.0.1",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py
)
'''
